--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,236 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+/* Carousel */
+/* * {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style: none;
+}
+body, html {
+  width: 100%;
+  height: 100%;
+  font-family: arial;
+  background: #2a2c2e;
+} */
+.slider-wrapper {
+  /* width: 100vw; */
+  height: 250px;
+  border: 1px solid #333;
+  overflow: hidden;
+  border-radius: 4px !important;
+}
+/* .slider {
+  width: 500vw;
+} */
+.slider-item, .hide {
+  float: left;
+  position: relative;
+  text-transform: uppercase;
+  color: #fff;
+  line-height: 250px;
+  font-size: 20px;
+  background: #383838;
+  text-align: center;
+  border-radius: 4px !important;
+  transition: all 0.2s linear;
+}
+.buttons-wrapper {
+  /* width: 100vw; */
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  top: 50%;
+  margin-top: -15px;
+}
+.buttons-wrapper .prev-button, .buttons-wrapper .next-button {
+  background-image: url(http://static.birgun.net/static/images/slider-arrow-left.svg);
+  background-size: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  height: 30px;
+  width: 30px;
+  border-radius: 4px;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  transition: all 0.2s linear;
+}
+.buttons-wrapper .next-button {
+  background-image: url(http://static.birgun.net/static/images/slider-arrow-right.svg);
+}
+.buttons-wrapper button:hover {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+/* indicators */
+.indicators {
+  /* width: 100vw; */
+  position: absolute;
+  bottom: -4px;
+  z-index: 2 !important;
+  text-align: center;
+}
+.indicators li {
+  display: inline-block;
+  margin-right: 5px;
+  width: 12px;
+  height: 12px;
+  font-size: 16px;
+  line-height: 30px;
+  border-radius: 100%;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  color: #333;
+  text-indent: -9999px;
+  cursor: pointer;
+  transition: all 0.2s linear;
+}
+.indicators li:last-child {
+  margin-right: 0;
+}
+.active-indicator {
+  background: rgba(0, 0, 0, 0.3) !important;
+  color: #fff !important;
+}
+/* indicators */
+
+
+/* Carousel2 --------------------------------*/
+.carousel {
+  position: relative;
+  width: 50vw;
+  height: 25vw;
+  overflow: hidden;
+  /* box-shadow: -1px 2px 10px 2px rgba(0, 0, 0, 0.5); */
+}
+.carousel_slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  z-index: 1;
+  background-color: black;
+  display: flex;
+  align-items: center;
+}
+.carousel_slide img {
+  max-width: 100%;
+}
+.carousel_history {
+  position: absolute;
+  z-index: 2;
+  bottom: 10px;
+  width: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.carousel_history ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  height: 3px;
+}
+.carousel_history ul li {
+  width: 15%;
+  box-sizing: border-box;
+  height: inherit;
+  position: relative;
+}
+.carousel_history ul li:not(:last-of-type) {
+  margin-right: 5%;
+}
+.carousel_history ul li button {
+  border: none;
+  outline: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  transition: background-color 300ms ease;
+}
+.carousel_history ul li button.active {
+  background-color: rgba(255, 255, 255, 0.95);
+}
+.carousel_control {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  height: 100%;
+  display: block;
+  background-color: rgba(0, 0, 0, 0.1);
+  border: 0;
+  padding: 0 5px;
+  width: 10%;
+  overflow: hidden;
+  transition: background-color 300ms ease;
+  cursor: pointer;
+}
+.carousel_control span {
+  display: inline-block;
+  width: 2vw;
+  height: 2vw;
+  position: relative;
+  box-sizing: border-box;
+  opacity: 0.65;
+  border-bottom: 3px solid white;
+  border-left: 3px solid white;
+  transition: opacity 300ms ease;
+}
+.carousel_control:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.carousel_control:hover span {
+  opacity: 0.95;
+}
+.carousel_control__prev {
+  left: 0;
+  padding-left: 12px;
+}
+.carousel_control__prev span {
+  transform: rotate(45deg);
+}
+.carousel_control__next {
+  right: 0;
+  padding-right: 12px;
+}
+.carousel_control__next span {
+  transform: rotate(-135deg);
+}
+.leave {
+  transform: translateX(0);
+}
+.enter-active.enter-next, .enter-active.enter-prev {
+  transform: translateX(0);
+  transition: transform 500ms linear;
+}
+.enter-next {
+  transform: translateX(100%);
+}
+.enter-prev {
+  transform: translateX(-100%);
+  transition: transform 500ms linear;
+}
+.leave-active-next {
+  transform: translateX(-100%);
+  transition: transform 500ms linear;
+}
+.leave.leave-active-prev {
+  transform: translateX(100%);
+  transition: transform 500ms linear;
+}
+
+.app {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
